--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Playlist Maker</string>
+    <string name="app_search">Поиск</string>
+    <string name="app_library">Медиатека</string>
+    <string name="app_settings">Настройки</string>
+    <string name="app_dark_style">Темная тема</string>
+    <string name="app_share">Поделиться приложением</string>
+    <string name="app_mail_Support">Написать в поддержку</string>
+    <string name="app_arrow_forward">Пользовательское соглашение</string>
 </resources>
