--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,8 @@
     <string name="extra_text_string">Спасибо разработчикам и разработчицам за крутое приложение!</string>
     <string name="oferta_url_string">https://yandex.ru/legal/practicum_offer/</string>
     <string name="share_text">Поделиться приложением</string>
+    <string name="error_not_found">Ничего не нашлось</string>
+    <string name="update">Обновить</string>
+    <string name="error_not_internet">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="download_failed">Загрузка не удалась. Проверьте подключение к интернету</string>
 </resources>
