--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="update">Обновить</string>
     <string name="error_not_internet">Проблемы со связью \n\n Загрузка не удалась. Проверьте подключение к интернету</string>
     <string name="download_failed">Загрузка не удалась. Проверьте подключение к интернету</string>
+    <string name="you_searched">Вы искали</string>
+    <string name="clear_history">Очистить историю</string>
+    <string name="search_go">Поиск</string>
 </resources>
