--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,5 +32,13 @@
     <string name="extra_text_string">Спасибо разработчикам и разработчицам за крутое приложение!</string>
     <string name="oferta_url_string">https://yandex.ru/legal/practicum_offer/</string>
     <string name="student_email">aleksandor1203@yandex.ru</string>
+    <!-- Mediateca  -->
+    <string name="mediateca">Медиатека</string>
+    <string name="empty_library">Ваша медиатека пуста</string>
+    <string name="you_are_not_create">Вы не создали
+        \nни одного плейлиста</string>
+    <string name="new_playlist">Новый плейлист</string>
+    <string name="favorit_tracks">Избранные песни</string>
+    <string name="playlists">Плэйлисты</string>
 
 </resources>
