--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,13 @@
     <string name="new_playlist">Новый плейлист</string>
     <string name="favorit_tracks">Избранные песни</string>
     <string name="playlists">Плэйлисты</string>
+    <string name="name_playlist">Название*</string>
+    <string name="descript_playlist">Описание</string>
+    <string name="create">Создать</string>
+    <string name="add_to_playlist">Добавить в плейлист</string>
+    <string name="title_dialog_new_playlist">Завершить создание плейлиста?</string>
+    <string name="message_dialog_new_playlist">Все несохраненные данные будут потеряны</string>
+    <string name="cancel_button">Отмена</string>
+    <string name="finish_button">Завершить</string>
 
 </resources>
