--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
         \nни одного плейлиста</string>
     <string name="new_playlist">Новый плейлист</string>
     <string name="favorit_tracks">Избранные песни</string>
-    <string name="playlists">Плэйлисты</string>
+    <string name="playlists">Плейлисты</string>
     <string name="name_playlist">Название*</string>
     <string name="descript_playlist">Описание</string>
     <string name="create">Создать</string>
